# ScholarshipFinder

./: .gitignore  AGENTS.md  README.md  db.sqlite3  pyproject.toml
.agents/skills/parallel-code-review/: SKILL.md
config/: settings.py  urls.py
openspec/changes/archive/2026-07-09-initial-project-setup/: design.md  proposal.md  tasks.md
openspec/changes/django-project-setup/: design.md  proposal.md  tasks.md
openspec/changes/django-project-setup/specs/django-project/: spec.md
openspec/changes/django-project-setup/specs/project-scaffold/: spec.md
openspec/changes/django-project-setup/specs/scholarship-models/: spec.md
openspec/changes/initial-project-setup/specs/project-scaffold/: spec.md
openspec/specs/project-scaffold/: spec.md
scholarships/: forms.py  models.py  tests.py  urls.py  views.py
scholarships/migrations/: 0001_initial.py
scholarships/templates/scholarships/: base.html  home.html  request_form.html  request_success.html  scholarship_detail.html  scholarship_list.html  user_detail.html  user_form.html
